--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
 
 scripts:
   # run tests - build will fail if tests fail
-  - docker run snly2386/react-test npm run test -- --coverage
+  - docker run snly2386/react-test npm test -- --coverage
 
 # after_success:
 #   # build prod versions of all projects
